dev - add download button

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
 
 body {
     background-color: var(--bcgd);
-    display: flex;
+    /* display: flex; */
     justify-content: center;
     align-items: center;
     min-height: 100vh;
@@ -457,5 +457,94 @@ p {
     .interest ul {
         grid-template-columns: repeat(1, 1fr);
     }
+    
+    button {
+        display: none;
+    }
 
 }
+
+  button{
+    background:#151515;
+    overflow: hidden;
+    border:none;
+    width:300px;
+    height:60px;
+    border-radius:9px;
+    position: relative;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    cursor:pointer;
+  }
+  
+  button span{
+      text-transform: uppercase;
+      font-family: 'Titillium Web', sans-serif;
+      color: white;
+      transition: 0.1s;
+      font-size: 20px;
+      position: fixed;
+      transform: translateX(-50%) translateY(-50%);
+      opacity:1;
+  }
+  button:active{
+    background:rgb(153,100,20);
+  }
+  
+  button:active  span{
+    font-size:23px;
+  }
+  
+  .active button{
+     background: rgb(153,100,20) !important; 
+  }
+  .active span{
+    opacity:0;
+    transition:0.7s;
+    transition-delay: 0.9s;
+    animation-timing-function: ease-out;
+  }
+  
+  .active svg{
+      width: 24px;
+      margin: 18px auto;
+      animation: icona;
+      animation-iteration-count: 1;
+      animation-duration: 1.4s;
+      display:block; 
+      animation-timing-function: ease-out;
+      opacity:1;
+  } 
+  
+  @keyframes icona { 
+        0% {opacity:0;}
+      90% {opacity:0;height: 15px;margin: 25px auto;} 
+      100% {opacity:1;height: 25px;} 
+  }
+  
+  .active div{
+    width: 306px;
+    height: 60px;
+    margin: -30px -6px;
+    z-index: -1;
+    position: absolute;
+    background: rgb(153,100,20);
+    animation: loading;
+    animation-duration: 0.5s; 
+    animation-delay: 0.3s;
+    animation-iteration-count: 1;
+    animation-timing-function: cubic-bezier(1,.27,.52,.67);
+    
+  }
+  
+  @keyframes loading {
+        0% {width:0px;margin: -30px -6px;}
+        10% {width:10px;}
+        20% {width:30px;} 
+      100% {width: 300px;background: rgb(153,100,20);margin: -30px -6px;} 
+  }
+  
+  button svg{
+      display:none;
+  }
